fix for issue #633
for record.css - the top rule of 20px made the permalink collide with
the record title if the page was narrowed. Making top ‘0’ aligns
permalink in the white space between the title and the navbar

--- a/record/record.css
+++ b/record/record.css
@@ -5,7 +5,7 @@
 
 #record-bookmark-container {
     text-align: right;
-    top: 20px;
+    top: 0;
 }
 
 .more-results-link {
